WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
33598
The touchcancel event is not supported.
https://bugs.webkit.org/show_bug.cgi?id=33598
Summary
The touchcancel event is not supported.
Ben Murdoch
Reported
2010-01-13 07:38:53 PST
There is currently no support inside WebCore for the touchcancel event, fired when a touch event is cancelled. I will upstream a patch from the Android port to add this support.
Attachments
Patch.
(16.21 KB, patch)
2010-01-15 09:46 PST
,
Ben Murdoch
no flags
Details
Formatted Diff
Diff
Patch v2
(14.82 KB, patch)
2010-01-20 06:41 PST
,
Ben Murdoch
hausmann
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Simon Hausmann
Comment 1
2010-01-13 07:41:17 PST
Great. We left it out because there is no such event yet in Qt. But it should certainly be there of course :)
Ben Murdoch
Comment 2
2010-01-15 09:46:04 PST
Created
attachment 46684
[details]
Patch.
Ben Murdoch
Comment 3
2010-01-20 06:10:50 PST
Comment on
attachment 46684
[details]
Patch. I'm just going to reorganise the patch and resubmit it (move the changes to js-test-pre|post to a separate, blocking bug)
Ben Murdoch
Comment 4
2010-01-20 06:27:55 PST
(In reply to
comment #3
)
> (From update of
attachment 46684
[details]
) > I'm just going to reorganise the patch and resubmit it (move the changes to > js-test-pre|post to a separate, blocking bug)
Actually turns out I just needed to look a bit closer at the functionality of the js-test-* scripts, and what I needed is already there :) New patch coming up...
Ben Murdoch
Comment 5
2010-01-20 06:41:40 PST
Created
attachment 47019
[details]
Patch v2
Simon Hausmann
Comment 6
2010-01-20 06:49:31 PST
Comment on
attachment 47019
[details]
Patch v2 Looks good to me. It's a shame we can't run the test currently, but the patch is mostly mechanic anyway :)
Ben Murdoch
Comment 7
2010-01-20 07:49:09 PST
Committed revision 53548.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug